--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.575.0",
     "next": "^16.1.6",
+    "next-themes": "^0.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
